@@ -45,8 +45,8 @@ public:
 	//functions
 	ButtonPanel(int _elevator, int index, const char *texture, int rows, int columns, const char *direction, float CenterX, float CenterZ, float buttonwidth, float buttonheight, float spacingX, float spacingY, float voffset, float tw, float th);
 	~ButtonPanel();
-	void AddFloorButton(const char *texture, int row, int column, int floor, float width, float height);
-	void AddControlButton(const char *texture, int row, int column, const char *type, float width, float height);
+	void AddFloorButton(const char *texture, int row, int column, int floor, float width, float height, float hoffset = 0, float voffset = 0);
+	void AddControlButton(const char *texture, int row, int column, const char *type, float width, float height, float hoffset = 0, float voffset = 0);
 	void DeleteButton(int row, int column);
 	void Press(int index);
 	void Move(const csVector3 &position);
@@ -58,7 +58,7 @@ private:
 	csRef<iMeshWrapper> ButtonPanelMesh; //button panel mesh object
 	csRef<iThingFactoryState> ButtonPanel_state;
 
-	void AddButton(const char *name, const char *texture, int row, int column, float bwidth, float bheight);
+	void AddButton(const char *name, const char *texture, int row, int column, float bwidth, float bheight, float hoffset, float voffset);
 };
 
 #endif
